--- a/hello-java/Dockerfile
+++ b/hello-java/Dockerfile
@@ -8,6 +8,7 @@ ENV	  JAVA_OPTIONS -Xmx512m
 
 # Install the Java runtime, create a user for running the app, and set permissions
 RUN   yum install -y --disableplugin=subscription-manager java-1.8.0-openjdk-headless && \
+      yun update && \
       yum -y install sendmail && \
       yum clean all --disableplugin=subscription-manager -y && \  
       mkdir -p /opt/app-root/bin
