--- a/hello-java/Dockerfile
+++ b/hello-java/Dockerfile
@@ -9,7 +9,7 @@ ENV	  JAVA_OPTIONS -Xmx512m
 # Install the Java runtime, create a user for running the app, and set permissions
 RUN   yum install -y --disableplugin=subscription-manager java-1.8.0-openjdk-headless && \
       yum -y update && \  
-      yum install -y --enablerepo=rhel-7-server-optional-rpms sendmail && \
+      yum install --disableplugin=subscription-manager sendmail -y && \
   
       yum clean all --disableplugin=subscription-manager -y && \  
       mkdir -p /opt/app-root/bin
